--- a/assignment2/2-2.css
+++ b/assignment2/2-2.css
@@ -5,7 +5,6 @@ body {
 }
 
 .header {
-
   color: white;
   display: flex;
   justify-content: space-between;
@@ -62,11 +61,9 @@ body {
 
 .table-cell {
   flex: 10;
-  /* padding: 8px; */
 }
 
 .table-cell.photo {
-
   margin-left: -90px;
 }
 
@@ -93,15 +90,12 @@ body {
   justify-content: center;
   text-align: center;
   white-space: nowrap;
-  /* Prevent wrapping */
   overflow: hidden;
-  /* Hide overflowing content */
   text-overflow: ellipsis;
 }
 
 
 .table-cell.staff {
-  /* background-color: beige; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -109,7 +103,6 @@ body {
 }
 
 .table-cell.actions {
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -153,11 +146,20 @@ img {
 
 
 @media(max-width: 700px) {
-  .table-cell.staff {
+
+
+
+
+  .table-cell.staff{
     display: none;
   }
 
-  .table-cell.actions {
+  .table-cell.actions{
     display: none;
   }
+
+  .table-cell{
+    margin: 5px;
+  }
+
 }
