--- a/assignment3/assignment3.css
+++ b/assignment3/assignment3.css
@@ -54,7 +54,7 @@ button {
     border-radius: 20px;
     display: none;
     position: fixed;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
@@ -181,6 +181,7 @@ button {
 ul#list {
     list-style: none;
     padding: 0;
+    
 }
 
 li {
@@ -202,13 +203,13 @@ li {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-/* Change background color on hover */
+
 li:hover {
     background-color: #e0e0e0;
 }
 
 span {
-    
+    margin-left: 100px;
     font-size: 16px;
     font-weight: 600;
     color: rgb(241, 79, 79);
